[gd_scene load_steps=6 format=3 uid="uid://sk45e7elu8k"]

[ext_resource type="Script" uid="uid://xqadh4sduf15" path="res://scripts/retry_ui.gd" id="1_pmxmf"]
[ext_resource type="Texture2D" uid="uid://ce67kppivgyhn" path="res://assets/art/panel_v1.png" id="2_8oyl1"]
[ext_resource type="FontFile" uid="uid://cmmi1q3juj7cv" path="res://assets/fonts/PixelOperator-Bold.ttf" id="3_obx06"]
[ext_resource type="Texture2D" uid="uid://rqwnjkvh7dbb" path="res://assets/art/replay_icon_v1.png" id="4_rtc7o"]
[ext_resource type="Texture2D" uid="uid://cumugct2g5h4" path="res://assets/art/replay_hover_v1.png" id="5_lmeul"]

[node name="RetryUI" type="CanvasLayer"]
script = ExtResource("1_pmxmf")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -435.5
offset_top = -219.5
offset_right = 435.5
offset_bottom = 219.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8oyl1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -380.0
offset_top = -145.5
offset_right = 380.0
offset_bottom = 145.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_group_ = true

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_obx06")
theme_override_font_sizes/font_size = 95
text = "Run terminated."
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 40

[node name="HighScore" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_obx06")
theme_override_font_sizes/font_size = 40
text = "High score: 3120"
horizontal_alignment = 1

[node name="CurrentScore" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_obx06")
theme_override_font_sizes/font_size = 48
text = "Current score: 3120"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 40

[node name="RetryButton" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture_normal = ExtResource("4_rtc7o")
texture_pressed = ExtResource("5_lmeul")
texture_hover = ExtResource("5_lmeul")
stretch_mode = 5

[connection signal="pressed" from="VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
